# fson

./: .gitignore  CMakeLists.txt  FSONConfig.cmake.in  FSONConfigVersion.cmake.in  readme.md
src/: CMakeLists.txt  libfson.pc.in
