set (CMAKE_FORTRAN_FLAGS "-O3")

file (GLOB SRCFiles *.f*)

set (CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/mod)

add_library(fson SHARED ${SRCFiles})

# install library
install(
	TARGETS fson
	EXPORT FSONTargets
	RUNTIME DESTINATION "${INSTALL_BIN_DIR}"
	LIBRARY DESTINATION "${INSTALL_LIB_DIR}/${PROJECT_NAME}"
	ARCHIVE DESTINATION "${INSTALL_LIB_DIR}/static"
	PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}/${PROJECT_NAME}"
)

# install fortran module files (note the trailing "/" after module directory)
install(
	DIRECTORY ${CMAKE_Fortran_MODULE_DIRECTORY}/
	DESTINATION "${INSTALL_INCLUDE_DIR}/${PROJECT_NAME}"
)